--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ header {
     content: "";
     width: 70%;
     height: 6px;
-    background-color: #fd7e2a;
+    background-color: #7e1393;
     border-radius: 5px;
     bottom: 20px;
     transition: 0.3s;
